--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
+  firebase_auth: ^5.1.1
+  firebase_core: ^3.1.0
   
   # Architecture & DI
   get_it: ^7.6.4
