--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   firebase_auth: ^5.1.1
   firebase_core: ^3.1.0
   
+  # AI Integration
+  flutter_gemini: ^2.0.4
+  
   # Architecture & DI
   get_it: ^7.6.4
   dartz: ^0.10.1
