--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,17 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   mocktail: ^1.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+# App Icon Configuration (Android only)
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/LogoNoText.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/LogoNoText.png"
